Исправление ошибок верстки на гридах на главной странице

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page-body">
-  <header class="main-header">
-    <div class="container">
-      <div class="header-wrap">
+  <header class="main-header container">
         <a class="header-logo">
           <img src="img/logo-header.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
@@ -60,8 +58,6 @@
                 </li>
               </ul>
             </li>
-          </ul>
-          <ul class="header-services">
             <li class="catalog-item">
               <a href="#">Доставка</a>
             </li>
@@ -73,8 +69,6 @@
             </li>
           </ul>
         </nav>
-      </div>
-    </div>
   </header>
   <main class="page-main">
     <section class="container gallery">
@@ -207,25 +201,21 @@
       <ul class="partners-list">
         <li class="partner-item">
           <a href="#">
-            <img src="img/logo-dji.png" width="260" height="100" alt="Логотип Dji">
             <img src="img/logo-dji-hover.png" width="260" height="100" alt="Логотип Dji">
           </a>
         </li>
         <li class="partner-item">
           <a href="#">
-            <img src="img/logo-spgadgets.png" width="260" height="100" alt="Логотип SpGadgets">
             <img src="img/logo-spgadgets-hover.png" width="260" height="100" alt="Логотип SpGadgets">
           </a>
         </li>
         <li class="partner-item">
           <a href="#">
-            <img src="img/logo-gopro.png" width="260" height="100" alt="Логотип GoPro">
             <img src="img/logo-gopro-hover.png" width="260" height="100" alt="Логотип GoPro">
           </a>
         </li>
         <li class="partner-item">
           <a href="#">
-            <img src="img/logo-vive.png" width="260" height="100" alt="Логотип Vive">
             <img src="img/logo-vive-hover.png" width="260" height="100" alt="Логотип Vive">
           </a>
         </li>
