Исправление шапки на внутренней странице

--- a/catalog.html
+++ b/catalog.html
@@ -12,9 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page-body">
-  <header class="main-header">
-    <div class="container">
-      <div class="header-wrap">
+  <header class="main-header container">
         <a class="header-logo" href="index.html">
           <img src="img/logo-header.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
@@ -63,8 +61,6 @@
                 </li>
               </ul>
             </li>
-          </ul>
-          <ul class="header-services">
             <li class="catalog-item">
               <a href="#">Доставка</a>
             </li>
@@ -76,8 +72,6 @@
             </li>
           </ul>
         </nav>
-      </div>
-    </div>
   </header>
   <main class="page-main">
       <section class="catalog-inner">
