Сетка на флексах

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-nav">
           <li class="service-item">
-            <button class="service-link-active more-btn" type="button">Доставка</button>
+            <button class="service-btn-current more-btn" type="button">Доставка</button>
           </li>
           <li class="service-item">
             <button class="more-btn" type="button">Гарантия</button>
@@ -181,15 +181,15 @@
           </li>
         </ul>
         <div class="service-info">
-          <div class="service-block-show">
+          <div class="service-block service-block-show">
             <h2>Доставка</h2>
             <p class="text-site">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </div>
-          <div class="service-block-no">
+          <div class="service-block service-block-no">
             <h2>Гарантия</h2>
-            <p class="text-site">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            <p class="text-site">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно же.</p>
           </div>
-          <div class="service-block-show">
+          <div class="service-block service-block-no">
             <h2>Кредит</h2>
             <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
           </div>
@@ -227,11 +227,11 @@
         <p class="text-site">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p class="text-site">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
         <ul class="delivery-partners">
-          <li class="delivery-partners-item">Деловые линии</li>
-          <li class="delivery-partners-item">Автотрейдинг</li>
-          <li class="delivery-partners-item">ЖелДорЭкспедиция</li>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a class="about-us-link more-btn" href="#">Подробнее о нас</a>
+        <a class="more-btn" href="#">Подробнее о нас</a>
       </section>
       <section class="contacts">
         <h2 class="title">Контакты</h2>
@@ -239,14 +239,14 @@
         <a class="contacts-map" href="#">
           <img src="img/map-office.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
         </a>
-        <a class="write-us more-btn" href="#">Напишите нам</a>
+        <a class="more-btn" href="#">Напишите нам</a>
       </section>
     </div>
   </main>
   <footer class="main-footer">
     <div class="container">
       <div class="footer-wrap">
-        <a class="footer-logo">
+        <a class="footer-logo" href="index.html">
           <img src="img/logo-footer.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <ul class="user-footer">
