--- a/catalog.html
+++ b/catalog.html
@@ -93,170 +93,174 @@
       </div>
       <div class="catalog-page">
         <div class="catalog-header">
-            <div class="header-filter container">
-              <h3 class="catalog-filter-title">Фильтр:</h3>
-              <div class="catalog-assort">
-                <h3>Сортировка:</h3>
-                <ul class="catalog-assort-list">
-                  <li class="catalog-assort-item">
-                    <a class="catalog-assort-active" href="#">По цене</a>
-                  </li>
-                  <li class="catalog-assort-item">
-                    <a href="#">По типу</a>
-                  </li>
-                  <li class="catalog-assort-item">
-                    <a href="#">По популярности</a>
-                  </li>
-                </ul>
-                <ul class="catalog-assort-arrows">
-                  <li class="assort-arrow-item">
-                    <a class="arrow-up" href="#">По возрастанию</a>
-                  </li>
-                  <li class="assort-arrow-item">
-                    <a class="arrow-down" href="#">По убыванию</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </div>
-          <div class="content-catalog container">
-            <section class="filter">
-              <h2 class="visually-hidden">Фильтр товаров</h2>
-              <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
-                <fieldset class="filter-list">
-                  <legend>Стоимость</legend>
-                  <div class="filter-range">
-                    <div class="range-controls">
-                      <div class="scale">
-                        <div class="bar" style="width: 60%; margin-left: 5%"></div>
-                      </div>
-                      <div class="range-toggle range-toggle-min" tabindex="0" style="left: 0"></div>
-                      <div class="range-toggle range-toggle-max" tabindex="0" style="left: 60%"></div>
-                    </div>
-                    <div class="price-controls">
-                      <label class="min-price">от
-                        <input type="number" name="min-price" value="0">
-                      </label>
-                      <label class="max-price">до
-                        <input type="number" name="max-price" value="5000">
-                      </label>
-                    </div>
-                  </div>
-                </fieldset>
-                <fieldset class="filter-list">
-                  <legend>Цвет</legend>
-                  <ul class="filter-color">
-                    <li class="filter-color-item">
-                      <input class="visually-hidden" type="checkbox" name="black" value="black" id="filter-black" checked disabled>
-                      <label for="filter-black">Черный</label>
-                    </li>
-                    <li class="filter-color-item">
-                      <input class="visually-hidden filter-checkbox" type="checkbox" name="white" id="filter-white">
-                      <label for="filter-white">Белый</label>
-                    </li>
-                    <li class="filter-color-item">
-                      <input class="visually-hidden" type="checkbox" name="blue" value="blue" id="filter-blue" checked>
-                      <label for="filter-blue">Синий</label>
-                    </li>
-                    <li class="filter-color-item">
-                      <input class="visually-hidden" type="checkbox" name="red" value="red" id="filter-red" checked>
-                      <label for="filter-red">Красный</label>
-                    </li>
-                    <li class="filter-color-item">
-                      <input class="visually-hidden" type="checkbox" name="pink" value="pink" id="filter-pink">
-                      <label for="filter-pink">Розовый</label>
-                    </li>
-                  </ul>
-                </fieldset>
-                <fieldset class="filter-list">
-                  <legend>Bluetooth</legend>
-                  <ul class="filter-bluetooth">
-                    <li class="filter-bluetooth-item">
-                      <input class="visually-hidden" type="radio" name="bluetooth" value="yes" id="yes" checked>
-                      <label for="yes">Есть</label>
-                    </li>
-                    <li class="filter-bluetooth-item">
-                      <input class="visually-hidden" type="radio" name="bluetooth" value="no" id="no">
-                      <label for="no">Нет</label>
-                    </li>
-                  </ul>
-                </fieldset>
-                <button type="submit" class="button more-btn">Показать</button>
-              </form>
-            </section>
-            <section class="content-products">
-              <h2 class="visually-hidden">Список товаров</h2>
-              <ul class="products-list">
-                <li class="products-item">
-                  <div class="product-image">
-                    <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                    <div class="info-hover">
-                      <a class="more-btn" href="#">В корзину</a>
-                      <a class="info-hover-compare" href="#">Добавить к сравнению</a>
-                    </div>
-                  </div>
-                  <div class="product-info">
-                    <a class="" href="#">Любительская селфи-палка</a>
-                    <p>500 руб.</p>
-                  </div>
+          <div class="header-filter container">
+            <h3 class="catalog-filter-title">Фильтр:</h3>
+            <div class="catalog-assort">
+              <h3>Сортировка:</h3>
+              <ul class="catalog-assort-list">
+                <li class="catalog-assort-item">
+                  <a class="catalog-assort-active" href="#">По цене</a>
                 </li>
-                <li class="products-item">
-                  <div class="product-image">
-                    <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                    <div class="info-hover">
-                      <a class="more-btn" href="#">В корзину</a>
-                      <a class="info-hover-compare" href="#">Добавить к сравнению</a>
-                    </div>
-                  </div>
-                  <div class="product-info">
-                    <a class="" href="#">Профессиональная селфи‑палка</a>
-                    <p>1 500 руб.</p>
-                  </div>
+                <li class="catalog-assort-item">
+                  <a href="#">По типу</a>
                 </li>
-                <li class="products-item">
-                  <div class="product-image">
-                    <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                    <div class="info-hover">
-                      <a class="more-btn" href="#">В корзину</a>
-                      <a class="info-hover-compare" href="#">Добавить к сравнению</a>
-                    </div>
-                  </div>
-                  <div class="product-info">
-                    <a class="" href="#">Непотопляемая селфи-палка</a>
-                    <p>2 500 руб.</p>
-                  </div>
+                <li class="catalog-assort-item">
+                  <a href="#">По популярности</a>
                 </li>
-                <li class="products-item">
-                  <div class="product-image">
-                    <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                    <div class="info-hover">
-                      <a class="more-btn" href="#">В корзину</a>
-                      <a class="info-hover-compare" href="#">Добавить к сравнению</a>
-                    </div>
-                  </div>
-                  <div class="product-info">
-                    <a class="" href="#">Селфи-палка «Следуй за мной»</a>
-                    <p>4 900 руб.</p>
-                  </div>
-                </ul>
-                <div class="pagination">
-                  <a class="pagination-btn pagination-btn-back pagination-btn-active" href="#">Назад</a>
-                  <ul class="pagination-number">
-                    <li>
-                      <a class="pagination-number-active">1</a>
-                    </li>
-                    <li>
-                      <a href="#">2</a>
-                    </li>
-                    <li>
-                      <a href="#">3</a>
-                    </li>
-                  </ul>
-                  <a class="pagination-btn pagination-btn-next" href="#">Вперед</a>
-                </div>
-              </section>
+              </ul>
+              <ul class="catalog-assort-arrows">
+                <li class="assort-arrow-item">
+                  <a class="arrow-up" href="#">По возрастанию</a>
+                </li>
+                <li class="assort-arrow-item">
+                  <a class="arrow-down" href="#">По убыванию</a>
+                </li>
+              </ul>
             </div>
           </div>
+        </div>
+        <div class="content-catalog container">
+          <section class="filter">
+            <h2 class="visually-hidden">Фильтр товаров</h2>
+            <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
+              <fieldset class="filter-list">
+                <legend>Стоимость</legend>
+                <div class="filter-range">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar" style="width: 60%; margin-left: 5%"></div>
+                    </div>
+                    <div class="range-toggle range-toggle-min" tabindex="0" style="left: 0"></div>
+                    <div class="range-toggle range-toggle-max" tabindex="0" style="left: 60%"></div>
+                  </div>
+                  <div class="price-controls">
+                    <label class="min-price">от
+                      <input type="number" name="min-price" value="0">
+                    </label>
+                    <label class="max-price">до
+                      <input type="number" name="max-price" value="5000">
+                    </label>
+                  </div>
+                </div>
+              </fieldset>
+              <fieldset class="filter-list">
+                <legend>Цвет</legend>
+                <ul class="filter-color">
+                  <li class="filter-color-item">
+                    <input class="visually-hidden" type="checkbox" name="black" value="black" id="filter-black" checked disabled>
+                    <label for="filter-black">Черный</label>
+                  </li>
+                  <li class="filter-color-item">
+                    <input class="visually-hidden filter-checkbox" type="checkbox" name="white" id="filter-white">
+                    <label for="filter-white">Белый</label>
+                  </li>
+                  <li class="filter-color-item">
+                    <input class="visually-hidden" type="checkbox" name="blue" value="blue" id="filter-blue" checked>
+                    <label for="filter-blue">Синий</label>
+                  </li>
+                  <li class="filter-color-item">
+                    <input class="visually-hidden" type="checkbox" name="red" value="red" id="filter-red" checked>
+                    <label for="filter-red">Красный</label>
+                  </li>
+                  <li class="filter-color-item">
+                    <input class="visually-hidden" type="checkbox" name="pink" value="pink" id="filter-pink">
+                    <label for="filter-pink">Розовый</label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="filter-list">
+                <legend>Bluetooth</legend>
+                <ul class="filter-bluetooth">
+                  <li class="filter-bluetooth-item">
+                    <input class="visually-hidden" type="radio" name="bluetooth" value="yes" id="yes" checked>
+                    <label for="yes">Есть</label>
+                  </li>
+                  <li class="filter-bluetooth-item">
+                    <input class="visually-hidden" type="radio" name="bluetooth" value="no" id="no">
+                    <label for="no">Нет</label>
+                  </li>
+                </ul>
+              </fieldset>
+              <button type="submit" class="button more-btn">Показать</button>
+            </form>
+          </section>
+          <section class="content-products">
+            <h2 class="visually-hidden">Список товаров</h2>
+            <ul class="products-list">
+              <li class="products-item">
+                <div class="product-image">
+                  <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                  <div class="product-img-overlay"></div>
+                  <div class="info-hover">
+                    <a class="more-btn" href="#">В корзину</a>
+                    <a class="info-hover-compare" href="#">Добавить к сравнению</a>
+                  </div>
+                </div>
+                <div class="product-info">
+                  <a class="" href="#">Любительская селфи-палка</a>
+                  <p>500 руб.</p>
+                </div>
+              </li>
+              <li class="products-item">
+                <div class="product-image">
+                  <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                  <div class="product-img-overlay"></div>
+                  <div class="info-hover">
+                    <a class="more-btn" href="#">В корзину</a>
+                    <a class="info-hover-compare" href="#">Добавить к сравнению</a>
+                  </div>
+                </div>
+                <div class="product-info">
+                  <a class="" href="#">Профессиональная селфи‑палка</a>
+                  <p>1 500 руб.</p>
+                </div>
+              </li>
+              <li class="products-item">
+                <div class="product-image">
+                  <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                  <div class="product-img-overlay"></div>
+                  <div class="info-hover">
+                    <a class="more-btn" href="#">В корзину</a>
+                    <a class="info-hover-compare" href="#">Добавить к сравнению</a>
+                  </div>
+                </div>
+                <div class="product-info">
+                  <a class="" href="#">Непотопляемая селфи-палка</a>
+                  <p>2 500 руб.</p>
+                </div>
+              </li>
+              <li class="products-item">
+                <div class="product-image">
+                  <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                  <div class="product-img-overlay"></div>
+                  <div class="info-hover">
+                    <a class="more-btn" href="#">В корзину</a>
+                    <a class="info-hover-compare" href="#">Добавить к сравнению</a>
+                  </div>
+                </div>
+                <div class="product-info">
+                  <a class="" href="#">Селфи-палка «Следуй за мной»</a>
+                  <p>4 900 руб.</p>
+                </div>
+              </ul>
+              <div class="pagination">
+                <a class="pagination-btn pagination-btn-back" href="#" disabled>Назад</a>
+                <ul class="pagination-number">
+                  <li>
+                    <a class="pagination-number-active">1</a>
+                  </li>
+                  <li>
+                    <a href="#">2</a>
+                  </li>
+                  <li>
+                    <a href="#">3</a>
+                  </li>
+                </ul>
+                <a class="pagination-btn pagination-btn-next" href="#">Вперед</a>
+              </div>
+            </section>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="main-footer">
