Добавление адреса ссылки в каталог товаров

--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
     <nav class="header-navigation-catalog">
       <ul class="catalog">
         <li class="catalog-item catalog-products">
-          <a href="#">Каталог товаров</a>
+          <a href="catalog.html">Каталог товаров</a>
           <ul class="goods">
             <li class="goods-item">
               <a href="#">Виртуальная реальность</a>
@@ -83,7 +83,7 @@
               <a href="#">Главная</a>
             </li>
             <li class="crumb-item">
-              <a href="#">Каталог товаров</a>
+              <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="crumb-item">
               Моноподы для селфи
@@ -176,7 +176,7 @@
                     <label for="yes">Есть</label>
                   </li>
                   <li class="filter-bluetooth-item">
-                    <input class="visually-hidden" type="radio" name="bluetooth" value="no" id="no">
+                    <input class="visually-hidden" type="radio" name="bluetooth" value="no" id="no" disabled>
                     <label for="no">Нет</label>
                   </li>
                 </ul>
@@ -244,7 +244,7 @@
                 </div>
               </ul>
               <div class="pagination">
-                <a class="pagination-btn pagination-btn-back" href="#" disabled>Назад</a>
+                <a class="pagination-btn pagination-btn-back" href="#">Назад</a>
                 <ul class="pagination-number">
                   <li>
                     <a class="pagination-number-active">1</a>
