--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="header-navigation">
       <ul class="catalog">
         <li class="catalog-item catalog-products">
-          <a href="#">Каталог товаров</a>
+          <a href="catalog.html">Каталог товаров</a>
           <ul class="goods">
             <li class="goods-item">
               <a href="#">Виртуальная реальность</a>
