Добавление доступности интерактивным элементам

--- a/catalog.html
+++ b/catalog.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="product-info">
                   <a class="" href="#">Любительская селфи-палка</a>
-                  <p>500 руб.</p>
+                  <p>1 100 руб.</p>
                 </div>
               </li>
               <li class="products-item">
@@ -225,12 +225,12 @@
                   </div>
                 </div>
                 <div class="product-info">
-                  <a class="" href="#">Непотопляемая селфи-палка</a>
-                  <p>2 500 руб.</p>
+                  <a class="" href="#">Непотопляемая<br> селфи-палка</a>
+                  <p>1 500 руб.</p>
                 </div>
               </li>
               <li class="products-item">
-                <div class="product-image">
+                <div class="product-image product-label-new">
                   <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                   <div class="product-img-overlay"></div>
                   <div class="info-hover">
@@ -240,7 +240,7 @@
                 </div>
                 <div class="product-info">
                   <a class="" href="#">Селфи-палка «Следуй за мной»</a>
-                  <p>4 900 руб.</p>
+                  <p>1 900 руб.</p>
                 </div>
               </ul>
               <div class="pagination">
