Исправление ошибок от наставника

--- a/catalog.html
+++ b/catalog.html
@@ -131,7 +131,7 @@
                       <div class="bar" style="width: 60%; margin-left: 5%"></div>
                     </div>
                     <div class="range-toggle range-toggle-min" tabindex="0" style="left: 0"></div>
-                    <div class="range-toggle range-toggle-max" tabindex="0" style="left: 60%"></div>
+                    <div class="range-toggle range-toggle-max" tabindex="0" style="left: 55%"></div>
                   </div>
                   <div class="price-controls">
                     <label class="min-price">от
@@ -265,7 +265,7 @@
     </main>
     <footer class="main-footer">
       <div class="container">
-        <div class="footer-wrap">
+        <div class="footer-wrap-catalog">
           <a class="footer-logo" href="index.html">
             <img src="img/logo-footer.svg" width="163" height="35" alt="Логотип Девайс">
           </a>
