--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="container gallery">
       <h2 class="visually-hidden">Галерея товаров</h2>
       <ol class="gallery-list">
-        <li class="gallery-item gallery-item-1">
+        <li class="gallery-item gallery-item-1 gallery-active">
           <div class="gallery-img">
             <img src="img/slider-main-1-compres.png" width="384" height="486" alt="Самая длинная палка для селфи">
           </div>
@@ -165,7 +165,7 @@
           </a>
         </li>
         <li class="categories-item">
-          <a class="categories-link" href="catalog.html">
+          <a class="categories-link" href="#">
             <div class="categories-img">
               <img src="img/icon-selfie.svg" width="86" height="117" alt="Моноподы для селфи">
             </div>
@@ -231,7 +231,7 @@
           </div>
           <div class="service-credit service-block service-block-no">
             <h2 class="title">Кредит</h2>
-            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита.<br> Выгодные для нашего банка, разумеется.</p>
+            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные&nbsp; условия кредита. Выгодные для нашего банка, разумеется.</p>
           </div>
         </div>
       </div>
@@ -374,7 +374,7 @@
   </section>
   <section class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1190963.9426648377!2d40.6742481!3d54.337515!3m2!1i1024!2i768!4f13.1!3m2!1m1!2z0YPQuy4g0LMuINCc0L7RgdC60LLQsCwg0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1!5e0!3m2!1sru!2sru!4v1614601480240!5m2!1sru!2sru" width="960" height="573" style="border:0;" allowfullscreen=""></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d334.3324801081383!2d37.529401509037505!3d55.687042745285446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1615279000787!5m2!1sru!2sru" width="960" height="573" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <p>
       <img src="img/map-big-1.jpg" alt="Офис компании по адресу улица Строителей, 15, г. Москва" width="960" height="573">
     </p>
