Установка кнопок слайдера

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             <p class="gallery-title title">Делай селфи,<br> как Бен Стиллер!</p>
             <p class="gallery-text text-site">Самая длинная палка для селфи доступна в нашем магазине.<br> Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
             <a class="gallery-link more-btn" href="#">Подробнее</a>
-            <table class="parameters">
+            <table class="parameters parameters-tabl-1">
               <tbody>
                 <tr>
-                  <td>8,5 м</td>
+                  <td class="">8,5 м</td>
                   <td>5 кг</td>
                   <td>Карбон</td>
                 </tr>
@@ -126,7 +126,7 @@
             <p class="gallery-title title">Порхает как бабочка, жалит как пчела!</p>
             <p class="gallery-text text-site">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
             <a class="gallery-link more-btn" href="#">Подробнее</a>
-            <table class="parameters">
+            <table class="parameters parameters-tabl-3">
               <tbody>
                 <tr>
                   <td>800 м</td>
@@ -231,7 +231,7 @@
           </div>
           <div class="service-credit service-block service-block-no">
             <h2 class="title">Кредит</h2>
-            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные&nbsp; условия кредита. Выгодные для нашего банка, разумеется.</p>
+            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
           </div>
         </div>
       </div>
