--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </div>
           <div class="service-credit service-block service-block-no">
             <h2 class="title">Кредит</h2>
-            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+            <p class="text-site">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br> условия кредита. Выгодные для нашего банка, разумеется.</p>
           </div>
         </div>
       </div>
@@ -357,11 +357,11 @@
       <div class="write-us-wrap">
         <p class="write-us-item">
           <label for="user-name">Ваше имя:</label>
-          <input type="text" name="name" placeholder="Имя Фамилия" id="user-name" required>
+          <input type="text" name="name" placeholder="Имя Фамилия" id="user-name">
         </p>
         <p class="write-us-item">
           <label for="user-mail">Ваш e-mail:</label>
-          <input type="email" name="e-mail" placeholder="email@example.com" id="user-mail" required>
+          <input type="email" name="e-mail" placeholder="email@example.com" id="user-mail">
         </p>
       </div>
       <p class="write-us-item field-text">
