--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
     </a>
     <div class="user-wrap">
       <form class="form-search" action="http://echo.htmlacademy.ru" method="get">
-        <input type="search" placeholder="Поиск по сайту">
+        <input type="search" placeholder="Поиск по сайту" id="search-form-input" required>
         <button type="submit" class="button search-button">Найти</button>
       </form>
       <ul class="user-header-catalog">
