--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       </p>
       <button class="more-btn" type="submit">Отправить</button>
     </form>
-    <button class="modal-close" type="button">Закрыть окно</button>
+    <button class="modal-close" type="button" aria-label="Закрыть окно"></button>
   </section>
   <section class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
@@ -378,7 +378,7 @@
     <p>
       <img src="img/map-big-1.jpg" alt="Офис компании по адресу улица Строителей, 15, г. Москва" width="960" height="573">
     </p>
-    <button class="modal-close" type="button">Закрыть окно</button>
+    <button class="modal-close" type="button" aria-label="Закрыть окно"></button>
   </section>
   <script src="js/popup.js"></script>
   <script src="js/map.js"></script>
