--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page-body">
   <header class="main-header container">
@@ -18,7 +18,8 @@
     </a>
     <div class="user-wrap">
       <form class="form-search" action="http://echo.htmlacademy.ru" method="get">
-        <label class="visually-hidden" for="search-form-input">Поле поиска</label>        <input type="search" placeholder="Поиск по сайту" id="search-form-input" required>
+        <label class="visually-hidden" for="search-form-input">Поле поиска</label>
+        <input type="search" placeholder="Поиск по сайту" id="search-form-input" required>
         <button type="submit" class="button search-button">Найти</button>
       </form>
       <ul class="user-header">
@@ -380,7 +381,7 @@
     </p>
     <button class="modal-close" type="button" aria-label="Закрыть окно"></button>
   </section>
-  <script src="js/popup.js"></script>
-  <script src="js/map.js"></script>
+  <script src="js/popup.min.js"></script>
+  <script src="js/map.min.js"></script>
 </body>
 </html>
