Добавление флекса карточке

--- a/catalog.html
+++ b/catalog.html
@@ -189,6 +189,12 @@
             <h2 class="visually-hidden">Список товаров</h2>
             <ul class="products-list">
               <li class="products-item">
+                <div class="product-info">
+                  <h3>
+                    <a href="#">Любительская селфи-палка</a>
+                  </h3>
+                  <p>1 100 руб.</p>
+                </div>
                 <div class="product-image">
                   <img src="img/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
                   <div class="info-hover">
@@ -196,12 +202,14 @@
                     <a class="info-hover-compare" href="#">Добавить к сравнению</a>
                   </div>
                 </div>
-                <div class="product-info">
-                  <a class="" href="#">Любительская селфи-палка</a>
-                  <p>1 100 руб.</p>
-                </div>
               </li>
               <li class="products-item">
+                <div class="product-info">
+                  <h3>
+                    <a href="#">Профессиональная селфи‑палка</a>
+                  </h3>
+                  <p>1 500 руб.</p>
+                </div>
                 <div class="product-image">
                   <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                   <div class="info-hover">
@@ -209,12 +217,14 @@
                     <a class="info-hover-compare" href="#">Добавить к сравнению</a>
                   </div>
                 </div>
-                <div class="product-info">
-                  <a class="" href="#">Профессиональная селфи‑палка</a>
-                  <p>1 500 руб.</p>
-                </div>
               </li>
               <li class="products-item">
+                <div class="product-info">
+                  <h3>
+                    <a href="#">Непотопляемая<br> селфи-палка</a>
+                  </h3>
+                  <p>1 500 руб.</p>
+                </div>
                 <div class="product-image">
                   <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
                   <div class="info-hover">
@@ -222,22 +232,20 @@
                     <a class="info-hover-compare" href="#">Добавить к сравнению</a>
                   </div>
                 </div>
-                <div class="product-info">
-                  <a class="" href="#">Непотопляемая<br> селфи-палка</a>
-                  <p>1 500 руб.</p>
-                </div>
               </li>
               <li class="products-item">
+                <div class="product-info">
+                  <h3>
+                    <a href="#">Селфи-палка «Следуй за мной»</a>
+                  </h3>
+                  <p>1 900 руб.</p>
+                </div>
                 <div class="product-image product-label-new">
                   <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                   <div class="info-hover">
                     <a class="more-btn" href="#">В корзину</a>
                     <a class="info-hover-compare" href="#">Добавить к сравнению</a>
                   </div>
-                </div>
-                <div class="product-info">
-                  <a class="" href="#">Селфи-палка «Следуй за мной»</a>
-                  <p>1 900 руб.</p>
                 </div>
               </ul>
               <div class="pagination">
