Добавление aria-label

--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
       </ol>
       <ul class="slider-controls">
         <li class="slider-toggle">
-          <button class="slider-btn-active" type="button">Первый</button>
+          <button class="slider-btn-active" type="button" aria-label="Первый слайд">Первый</button>
         </li>
         <li class="slider-toggle">
-          <button type="button">Второй</button>
+          <button type="button" aria-label="Второй слайд">Второй</button>
         </li>
         <li class="slider-toggle">
-          <button type="button">Третий</button>
+          <button type="button" aria-label="Третий слайд">Третий</button>
         </li>
       </ul>
     </section>
@@ -212,13 +212,13 @@
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="services-nav">
           <li class="service-item">
-            <button class="service-btn-current more-btn" type="button">Доставка</button>
+            <button class="service-btn-current more-btn" type="button" aria-label="первый слайд">Доставка</button>
           </li>
           <li class="service-item">
-            <button class="more-btn" type="button">Гарантия</button>
+            <button class="more-btn" type="button" aria-label="второй слайд">Гарантия</button>
           </li>
           <li class="service-item">
-            <button class="more-btn" type="button">Кредит</button>
+            <button class="more-btn" type="button" aria-label="третий слайд">Кредит</button>
           </li>
         </ul>
         <div class="service-info">
@@ -280,7 +280,7 @@
         <a class="contacts-map" href="#">
           <img src="img/map-office.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
         </a>
-        <a class="about-wrap-write more-btn" href="#">Напишите нам</a>
+        <a class="about-wrap-write more-btn" href="writeus.html">Напишите нам</a>
       </section>
     </div>
   </main>
